k8s_webhook/deployment/validatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation-webhook-example-cfg
  labels:
    app: admission-webhook-example
webhooks:
- name: required-labels.qikqiak.com
  sideEffects: None
  admissionReviewVersions: ["v1beta1", "v1"]
  clientConfig:
    service:
      name: admission-webhook-example-svc
      namespace: default
      path: "/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1USXhPREV5TVRZeE5sb1hEVE16TVRJeE5URXlNVFl4Tmxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSnlGCnZGSWlZMkMxWXFqTno1bVNxRE01WXkzdk5vbDlBUEtYWVpPR0MvRTJnT3JQcFpEVVpmZmhQZUdyQ1owSDhlZG8KVnQ0RTZYVmMwS3dpOENkWFg5UlhZY0lWV0FpU2Y0Q1p3T3RVanZ6SjR4MDFDaHFOKzdiY1FPbHpNL05JMnJZdQpNZVpPSUcyVGU1SD [...]
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["apps", ""]
    apiVersions: ["v1"]
    resources: ["deployments", "services"]
  namespaceSelector:
    matchLabels:
      admission-webhook-example: enabled
